--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
-group "com.demonwav"
-version "1.0-SNAPSHOT"
+group "com.s2s"
+version "1.0-RC1"
 
 buildscript {
     ext {
-        kotlin_version = "1.1.3-2"
-        junit_jupiter_version = "5.0.0-M5"
-        junit_platform_version = "1.0.0-M5"
+        kotlin_version = "1.1.51"
+        junit_jupiter_version = "5.0.1"
+        junit_platform_version = "1.0.1"
     }
 
     repositories {
