--- a/build.gradle
+++ b/build.gradle
@@ -3,9 +3,9 @@ version "1.0-RC1"
 
 buildscript {
     ext {
-        kotlin_version = "1.1.51"
-        junit_jupiter_version = "5.0.1"
-        junit_platform_version = "1.0.1"
+        kotlin_version = "1.2.71"
+        junit_jupiter_version = "5.3.1"
+        junit_platform_version = "1.3.1"
     }
 
     repositories {
@@ -13,24 +13,25 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-        classpath "org.junit.platform:junit-platform-gradle-plugin:$junit_platform_version"
     }
 }
 
 apply plugin: "kotlin"
-apply plugin: "org.junit.platform.gradle.plugin"
 
 repositories {
     jcenter()
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre8:$kotlin_version"
-    testCompile "org.junit.jupiter:junit-jupiter-api:$junit_jupiter_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:$junit_jupiter_version"
 
     testRuntime "org.junit.jupiter:junit-jupiter-engine:$junit_jupiter_version"
     testRuntime "org.junit.platform:junit-platform-launcher:$junit_platform_version"
-    testRuntime "org.junit.platform:junit-platform-runner:$junit_platform_version"
+}
+
+test {
+    useJUnitPlatform()
 }
 
 compileKotlin {
